hphp/hack/test/typecheck/case_type/recursive/subtyping_simple0.php.exp
ERROR: File "subtyping_simple0.php", line 14, characters 12-13:
Invalid argument (Typing[4110])
  File "subtyping_simple0.php", line 6, characters 19-19:
  Expected `A`
  File "subtyping_simple0.php", line 10, characters 28-33:
  But got `string`
